deparrow/k8s/overlays/staging/patches/compute-staging.yaml
# Compute nodes staging resources
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compute-node-dind
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: dind
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
        - name: compute
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 4Gi
